setting post order
