# docs/swagger.yaml
@@ -105,6 +105,95 @@ paths:
       summary: SignIn
       tags:
       - Auth
+  /api/user/orders:
+    get:
+      consumes:
+      - text/plain
+      description: create and validate client order
+      operationId: get_order
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: no content
+          schema:
+            type: int
+        "202":
+          description: no content
+          schema:
+            type: int
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: GetOrder
+      tags:
+      - Order
+    post:
+      consumes:
+      - text/plain
+      description: create and validate client order
+      parameters:
+      - description: new title and description for item
+        in: body
+        name: input
+        required: true
+        schema:
+          type: integer
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: no content
+          schema:
+            type: int
+        "202":
+          description: no content
+          schema:
+            type: int
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: CreateOrder
+      tags:
+      - Order
   /api/user/register:
     post:
       consumes:
